<resources>
    <string name="app_name">Arbor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="contentDescr">Add tree</string>
    <string name="logout">Logout</string>
    <string name="orga">Verwaltung Bäume"</string>
    <string name="mapButtonText">Kartenansicht</string>
    <string name="save">Speichern</string>
    <string name="discard">Verwerfen</string>
    <string name="treeNameField">Name</string>
    <string name="treeNamehint">Baumname eingeben</string>
    <string name="latNameField">lat. Name</string>
    <string name="plantTimeText">Einpflanzung</string>
    <string name="sizeText">Größe</string>
    <string name="sizeInput">Größe (in m) eingeben</string>
    <string name="latitudeText">Latitude</string>
    <string name="altitudeText">Altitude</string>
    <string name="longitudeText">Longitude</string>
    <string name="namePlaceholder">Platzhalter</string>
    <string name="descText">Beschreibung</string>
    <string name="takePhoto">Foto schießen</string>
    <string name="addfoto">Foto hinzufügen</string>
    <string name="addDocument">Dokument hinzufügen</string>
    <string name="todo">TODO</string>
    <string name="placeholder">placeholder</string>
    <string name="user">User</string>
    <string name="taskStart">Aufgabenbeginn</string>
    <string name="taskEnd">Aufgabenende</string>
    <string name="profil">Profil</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="nickName">Nickname</string>
    <string name="email">Email</string>
</resources>