<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <TextView
                android:id="@+id/firstNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lastNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/nickNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickName" />

            <EditText
                android:id="@+id/nickNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/eMailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/eMailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/passWordView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passWordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/saveProfilBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>